--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <LinearLayout
+        <!--<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -31,7 +31,7 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/action_title_size" />
             </android.support.design.widget.AppBarLayout>
-        </LinearLayout>
+        </LinearLayout>-->
 
         <LinearLayout
             android:id="@+id/EditProfileAContainer"
@@ -50,6 +50,7 @@
                 <ImageView
                     android:layout_width="@dimen/data_screen_icon_size"
                     android:layout_height="@dimen/data_screen_icon_size"
+                    android:id="@+id/selectPicture"
                     android:src="@drawable/camera"
                     />
             </LinearLayout>
