--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
                 android:textSize="15sp" />
 
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/txtUserName"
                 android:layout_width="185dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -92,6 +92,7 @@
                 android:textSize="15sp" />
 
             <EditText
+                android:id="@+id/txtUserPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -134,7 +135,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:orientation="horizontal"></LinearLayout>
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/lblUserNotFound"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                android:textColor="@color/colorWhite"
+                android:text="@string/userNotRegistered"/>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
