--- a/app/src/main/res/values/dashboard_options.xml
+++ b/app/src/main/res/values/dashboard_options.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="dashboard_options">
-        <item>Select</item>
+        <item>...</item>
         <item>Setings</item>
         <item>Salir</item>
     </string-array>
