--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -112,7 +112,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:layout_weight="1"
-                            android:text="@string/draft"
+                            android:text="@string/owned"
                             android:textSize="20sp" />
 
                         <LinearLayout
