--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -162,15 +162,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/lblDraft"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAlignment="center"
                     android:text="@string/draftico"
                     android:textColor="@color/colorDarkGray"
                     android:textSize="25dp" />
+
+                <TextView
+                    android:id="@+id/lblDraftTotal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:text="0"
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="14dp"
+                    android:textStyle="bold"/>
 
                 <!--<TextView
                     android:layout_width="wrap_content"
@@ -185,15 +196,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/lblSubmitted"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAlignment="center"
                     android:text="@string/submittedico"
                     android:textColor="@color/colorDarkGray"
                     android:textSize="25dp" />
+
+                <TextView
+                    android:id="@+id/lblSubmittedTotal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:text="0"
+                    android:textColor="@color/colorDarkGray"
+                    android:textSize="14dp"
+                    android:textStyle="bold"/>
 
                 <!--<TextView
                     android:layout_width="wrap_content"
@@ -212,8 +234,9 @@
 
                 <TextView
                     android:id="@+id/lblTicket"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAlignment="center"
                     android:text="@string/ticketico"
                     android:textColor="@color/colorDarkGray"
                     android:textSize="25dp" />
@@ -233,14 +256,15 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <TextView
+                <!--<TextView
                     android:id="@+id/lblSetings"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAlignment="center"
                     android:layout_marginTop="-5dp"
                     android:text="@string/setingsico"
                     android:textColor="@color/colorDarkGray"
-                    android:textSize="25dp" />
+                    android:textSize="25dp" />-->
 
                 <Spinner
                     android:id="@+id/dashboardOptions"
