--- a/app/src/main/res/layout/draft_row_recycleview.xml
+++ b/app/src/main/res/layout/draft_row_recycleview.xml
@@ -14,31 +14,59 @@
         android:layout_margin="4dp"
         android:padding="2dp"
         app:cardUseCompatPadding="true">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
 
-            <TextView
-                android:id="@+id/lblDraftReportName"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/colorDarkGray"
-                android:text="TextView"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/lblDraftReportNumber"
+                <TextView
+                    android:id="@+id/lblDraftReportName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:textColor="@color/colorDarkGray"
+                    android:text="0"
+                    android:layout_margin="2dp"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/lblDraftReportNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:textColor="@color/colorLime"
+                    android:text="0"
+                    android:layout_margin="4dp"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textColor="@color/colorLime"
-                android:text="TextView"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/lblDraftReportTotal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:gravity="right"
+                    android:textColor="@color/colorDarkGray"
+                    android:text="0.0"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 </LinearLayout>
